# pruebaTecnica

./: .gitignore  README.md  docker-compose.yml
api-riesgo-proveedores/: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  api-riesgo-proveedores.yaml  deployment.yaml  pyproject.toml  service.yaml
api-riesgo-proveedores/app/: dependencies.py  main.py
api-riesgo-proveedores/app/api/: router.py
api-riesgo-proveedores/app/api/endpoints/: riesgo_proveedor.py
api-riesgo-proveedores/app/clients/: base.py  conflictos_client.py  paises_client.py  referencia_geografica_client.py  tipo_cambio_client.py
api-riesgo-proveedores/app/core/: config.py
api-riesgo-proveedores/app/db/: base.py  catalog_seeder.py  schema_initializer.py  session.py
api-riesgo-proveedores/app/models/: riesgo_proveedor.py
api-riesgo-proveedores/app/repositories/: moneda_repository.py  pais_catalogo_repository.py  pais_detalle_repository.py  pais_repository.py  region_repository.py
api-riesgo-proveedores/app/schemas/: riesgo_proveedor.py
api-riesgo-proveedores/app/services/: riesgo_economico_service.py  riesgo_geopolitico_service.py  riesgo_proveedor_service.py
app-riesgo-proveedores/: .dockerignore  .env.example  Dockerfile  README.md  deployment.yaml  index.html  package-lock.json  package.json  service.yaml
app-riesgo-proveedores/src/: App.css  App.jsx  index.css
app-riesgo-proveedores/src/api/: client.js
app-riesgo-proveedores/src/components/: CountryFlag.jsx  CountrySearch.jsx  ErrorState.jsx  FactorBar.jsx  LoadingState.jsx  NivelBadge.jsx  ScoreBar.jsx  ScoreMeter.jsx
(+9 files in other folders)
