[project]
name = "api-riesgo-proveedores"
version = "0.1.0"
description = "API del Panel de Riesgo de Proveedores Internacionales"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aiobreaker>=1.2.0",
    "aiolimiter>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
